fix: asymmetric container padding to shift all sections right

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -23,8 +23,8 @@
     max-width: 1440px;
     margin-left: auto;
     margin-right: auto;
-    padding-left: 8rem;
-    padding-right: 8rem;
+    padding-left: 4rem;
+    padding-right: 12rem;
   }
 
   .custom-scrollbar::-webkit-scrollbar {
